[package]
name = "bindiff"
version = "0.2.0"
authors = ["WatDuhHekBro <44940783+WatDuhHekBro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
indicatif = "0.15.0"
regex = "1.4.2"
