[package]
name = "bindiff"
version = "0.3.1"
authors = ["WatDuhHekBro <44940783+WatDuhHekBro@users.noreply.github.com>"]
edition = "2018"
description = "Some command line tools for various purposes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossterm = "0.18.2"
indicatif = "0.15.0"
regex = "1.4.2"
